--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>after git</title>
+	<!-- MI CSS -->
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 	<div class="gridContainer">
